--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
     "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^5.15.10",
     "@mui/system": "^5.15.9",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
